<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.login.LoginFragment"
        android:id="@+id/firstPage">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" tools:ignore="UselessParent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

            <ImageView
                    android:src="@drawable/loginbg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:scaleType="fitStart"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:id="@+id/tv_username" android:textSize="20sp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_password" android:layout_marginBottom="32dp"
                    android:background="@drawable/user_name" app:layout_constraintDimensionRatio="w,1:1"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/et_username"
                    app:layout_constraintStart_toEndOf="@+id/tv_username" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="1.0" android:hint="@string/login_InputUsername"
                    tools:ignore="Autofill"
                    app:layout_constraintTop_toTopOf="@+id/tv_username"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_username"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:id="@+id/tv_password" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
                    android:textSize="20sp"
                    android:background="@drawable/password"
                    app:layout_constraintDimensionRatio="w,1:1" android:layout_marginBottom="62dp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_login"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/et_password"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toEndOf="@+id/tv_password" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/login_InputPassword" app:layout_constraintHorizontal_bias="1.0"
                    tools:ignore="Autofill"
                    app:layout_constraintTop_toTopOf="@+id/tv_password"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_password"/>
            <Button
                    android:text="@string/login_BtnLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_login" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="50dp" android:layout_marginStart="50dp" android:layout_marginRight="50dp"
                    android:layout_marginEnd="50dp" android:background="@drawable/bg_btn_white"
                    android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/btn_register"
                    android:textSize="20sp"/>
            <Button
                    android:text="@string/login_BtnRegister"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/btn_register" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.12"
                    android:background="@drawable/hengxian" android:layout_marginBottom="267dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintDimensionRatio="w,1:1" android:scrollbarAlwaysDrawHorizontalTrack="false"
                    android:scrollbarAlwaysDrawVerticalTrack="false"
                    android:gravity="center_horizontal"/>
            <Button
                    android:text="@string/login_BtnForgetPassword"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/btn_forgetpsw" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.88" android:background="@drawable/hengxian"
                    app:layout_constraintTop_toTopOf="@+id/btn_register" app:layout_constraintDimensionRatio="w,3:2"
                    android:gravity="center_horizontal"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>